Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82146

doubleClicked() not emitted for Button on touch devices

XMLWordPrintable

    • fb6baf03faf1ffdda5917b9daa9e9ed0f821fa8a (qt/qtquickcontrols2/dev)

      import QtQuick 2.0
      import QtQuick.Controls 2.0
      
      ApplicationWindow {
          id: window
          width: 400
          height: 400
          visible: true
      
          Button {
              anchors.left: parent.left
              anchors.right: parent.right
              height: 100
              text: "Click me"
              onPressed: print('pressed')
              onReleased: print('released')
              onClicked: {
                  console.log("Single Click");
              }
              onDoubleClicked: console.log("Double click")
          }
      }
      

        For Gerrit Dashboard: QTBUG-82146
        # Subject Branch Project Status CR V

            mitch_curtis Mitch Curtis
            mitch_curtis Mitch Curtis
            Votes:
            2 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes