Fix clicked() being emitted after doubleClicked()

Do as MouseArea does, and keep track of double clicks ourselves,
otherwise we think the second click is a regular click.

This is for mouse events only; for touch we have bigger
problems to solve first: QTBUG-82146

Change-Id: I46e816d0cfa1bab98a0a1685915842ebd176e762
Fixes: QTBUG-82032
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>