src/quicktemplates2/qquickabstractbutton.cpp
@@ -176,7 +176,7 @@ void QQuickAbstractButtonPrivate::handleRelease(const QPointF &point)
 
     if (wasPressed) {
         emit q->released();
-        if (!wasHeld)
+        if (!wasHeld && !wasDoubleClick)
             trigger();
     } else {
         emit q->canceled();
@@ -186,6 +186,8 @@ void QQuickAbstractButtonPrivate::handleRelease(const QPointF &point)
         stopPressRepeat();
     else
         stopPressAndHold();
+
+    wasDoubleClick = false;
 }
 
 void QQuickAbstractButtonPrivate::handleUngrab()
@@ -199,6 +201,7 @@ void QQuickAbstractButtonPrivate::handleUngrab()
     q->setPressed(false);
     stopPressRepeat();
     stopPressAndHold();
+    wasDoubleClick = false;
     emit q->canceled();
 }
 
@@ -1078,8 +1081,10 @@ void QQuickAbstractButton::mousePressEvent(QMouseEvent *event)
 
 void QQuickAbstractButton::mouseDoubleClickEvent(QMouseEvent *event)
 {
+    Q_D(QQuickAbstractButton);
     QQuickControl::mouseDoubleClickEvent(event);
     emit doubleClicked();
+    d->wasDoubleClick = true;
 }
 
 void QQuickAbstractButton::timerEvent(QTimerEvent *event)
